leaf/v/2.4/intro/README.md
# 📚 Getting Started

## What is Leaf

Leaf is a PHP framework that helps you create clean, simple but powerful web apps and APIs quickly. Leaf introduces a cleaner and much simpler structure to the PHP language while maintaining it's flexibility.

With a simple structure and a shallow learning curve, it's an excellent way to rapidly build powerful and high performant web apps and APIs.

Simply install Leaf, and you're good to go.

## 📁 Installation

### Composer installation

Composer is a dependency manager for PHP, just like npm for javascript and ruby gems. Therefore, you need to have PHP installed on your system. If you don't already have composer installed, you can download it [here](https://getcomposer.org/)

After downloading composer, you can run this command to install leaf in your project folder.

```bash
composer require leafs/leaf
```

### Github clone

You can also clone the repo and setup your autoloader.

<div style="border: 1px solid rgba(10, 230, 150, 0.8); border-radius: 4px; background: rgba(10, 230, 150, 0.05); padding: 20px 30px; padding-bottom: 32px;">
  <div style="font-weight: bolder; font-size: 25px; margin-bottom: -18px !important;">Setup</div>
    <p style="color: rgb(5, 160, 70); font-size: 18px;">
       You can directly clone or download the git repo here.
    </p>
    <a
      href="https://github.com/leafsphp/leaf/archive/v2.4.1.zip"
      style="background: #202020; color: white; text-decoration: none; padding: 8px 15px; border-radius: 3px;"
      download
    >Download Repo</a>
</div>

**Example autoloader: `autoloader.php`**

```php
<?php
spl_autoload_register(function ($class) {
    $file = str_replace('\\', '/', $class);

    if (!file_exists("leaf/src/$file.php")) return;

    require "leaf/src/$file.php";
});
```

<br>
<hr>

## Next steps

- [Configuring .htaccess](leaf/v/2.4/intro/htaccess)
- [Your first leaf app](leaf/v/2.4/intro/first)
- [Routing](leaf/v/2.4/routing/)

<br>

Built with ❤ by <a href="https://mychi.netlify.app" style="font-size: 20px; color: #111;" target="_blank">Mychi Darko</a>
